# ghcp-desktop-app

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STYLE-GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.githooks/: post-merge
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  prepare-release.yml  release.yml
crates/copilot-api/: Cargo.toml
crates/copilot-api/src/: auth.rs  client.rs  keychain.rs  lib.rs  types.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: catalog.rs  client.rs  lib.rs  manager.rs  registry.rs  types.rs
crates/web-research/: Cargo.toml
crates/web-research/src/: fetcher.rs  lib.rs  search.rs  types.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: bump.rs  changelog.rs  check.rs  main.rs  release.rs  version.rs
docs/: API-REFERENCE.md  DATA-MODEL.md  PLAN.md  RELEASE.md  WIREFRAMES.md
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  registry.rs  skillmd.rs  state.rs  text_extract.rs
src-tauri/src/commands/: agents.rs  auth.rs  chat.rs  conversations.rs  mcp.rs  mod.rs  models.rs  projects.rs  settings.rs  skills.rs  sources.rs  web_research.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs
src/lib/components/: AgentsPanel.svelte  AuthScreen.svelte  ChatView.svelte  CodeBlock.svelte  CommandPopup.svelte  ConfirmDialog.svelte  InputArea.svelte  McpServerForm.svelte  McpSettings.svelte  MessageBubble.svelte  ProjectView.svelte  SearchOverlay.svelte  SettingsPanel.svelte  Sidebar.svelte  SkillsPanel.svelte  SourcesPanel.svelte  ThinkingSection.svelte  UpdateBanner.svelte  WebResultCard.svelte
src/lib/stores/: agents.svelte.ts  auth.svelte.ts  conversations.svelte.ts  mcp.svelte.ts  models.svelte.ts  network.svelte.ts  projects.svelte.ts  settings.svelte.ts  skills.svelte.ts  sources.svelte.ts
src/lib/strings/: en.ts
src/lib/types/: agent.ts  auth.ts  commands.ts  conversation.ts  mcp.ts  message.ts  project.ts  registry.ts  skill.ts  source.ts  web-research.ts
src/lib/utils/: command-parser.ts  commands.ts  events.ts  format.ts  markdown.ts  syntax.ts
src/tests/: command-parser.test.ts  format.test.ts
