[workspace]
members = ["src-tauri", "crates/copilot-api", "crates/mcp-client", "crates/web-research", "crates/xtask"]
resolver = "2"

[workspace.package]
version = "0.11.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/andras-pinter/ghcp-desktop-app"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
url = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde_norway = "0.9"
