[package]
name = "copilot-api"
version = "0.1.0"
description = "GitHub Copilot API client — OAuth + SSE streaming chat completions"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true

# OAuth token storage
keyring = "3"

# SSE streaming
reqwest-eventsource = "0.6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
