[package]
name = "mcp-client"
version = "0.1.0"
description = "MCP protocol client — tool discovery and invocation"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true
url.workspace = true
uuid.workspace = true
