[package]
name = "mcp-client"
version = "0.1.0"
description = "MCP protocol client — tool discovery and invocation"
edition.workspace = true
license.workspace = true

[features]
default = ["http"]
http = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
log.workspace = true
url.workspace = true

# Official MCP Rust SDK
rmcp = { version = "1.3", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
