[package]
name = "mcp-client"
version.workspace = true
description = "MCP protocol client — tool discovery and invocation"
edition.workspace = true
license.workspace = true

[features]
default = ["http"]
http = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
log.workspace = true
url.workspace = true
reqwest.workspace = true

# Official MCP Rust SDK
rmcp = { version = "1.3", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
