[package]
name = "xtask"
version.workspace = true
description = "Build automation tasks — version bumping, changelog, consistency checks"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
semver = "1"
toml_edit = "0.25"
serde_json.workspace = true
